src/snapshots/cornercase__ui__tests__agents_section__renders_in_a_narrow_column.snap
---
source: src/ui.rs
assertion_line: 8368
expression: "render_sized(&v, W, TALL.height).backend()"
---
"  ⌕ search proje…  │                                                                                "
"                   │                                                                                "
" Projects          │                                                                                "
"                   │                                                                                "
"  cornerca… (1)    │                                                                                "
"▌ website (1)      │                                                                                "
"  ↓ 1 more         │                                                                                "
"  + New            │                                                                                "
" ───────────────── │                                                                                "
" Workspaces        │                                                                                "
"                   │                                                                                "
"  default          │                                                                                "
"▌ ├ codex          │                                                                                "
"  └ + Tab          │                                                                                "
"                   │                                   no tab open                                  "
"  + New workspace  │                            + Tab opens a shell here                            "
" ───────────────── │                                                                                "
" Agents            │                                                                                "
"                   │                                                                                "
"  ! cornercase     │                                                                                "
"    claude · 23%   │                                                                                "
"▌ ◐ website        │                                                                                "
"▌   codex · 41%    │                                                                                "
"  ↓ 1 more         │                                                                                "
" ───────────────── │                                                                                "
"  Issues           │                                                                                "
"  Files      TODO  │                                                                                "
"  Settings         │                                                                                "
"  Usage            │                                                                                "
"  Quit             │                                                                                "
