src/snapshots/cornercase__ui__tests__agents_section__renders_no_agents_running.snap
---
source: src/ui.rs
assertion_line: 8466
expression: "render_sized(&shown(Sidebar::ProjectsOnTop, Vec::new()), W,\nTALL.height).backend()"
---
"  ⌕ search projects, workspa…  │                                                                    "
"                               │                                                                    "
" Projects                      │                                                                    "
"                               │                                                                    "
"  cornercase (1)               │                                                                    "
"▌ website (1)                  │                                                                    "
"  ↓ 1 more                     │                                                                    "
"  + New                        │                                                                    "
" ───────────────────────────── │                                                                    "
" Workspaces                    │                                                                    "
"                               │                                                                    "
"  default                      │                                                                    "
"▌ ├ › codex                    │                                                                    "
"  └ + Tab                      │                                                                    "
"                               │                             no tab open                            "
"  + New workspace              │                      + Tab opens a shell here                      "
" ───────────────────────────── │                                                                    "
" Agents                        │                                                                    "
"                               │                                                                    "
"  no agents running            │                                                                    "
"                               │                                                                    "
"                               │                                                                    "
"                               │                                                                    "
"                               │                                                                    "
" ───────────────────────────── │                                                                    "
"  Issues                       │                                                                    "
"  Files                  TODO  │                                                                    "
"  Settings                     │                                                                    "
"  Usage                        │                                                                    "
"  Quit                         │                                                                    "
