src/snapshots/cornercase__ui__tests__agents_section__renders_projects_on_top.snap
---
source: src/ui.rs
expression: "render_sized(&shown(Sidebar::ProjectsOnTop, entries()), W,\nTALL.height).backend()"
---
"  ⌕ search projects, workspa…  │                                                                    "
"                               │                                                                    "
" projects                      │                                                                    "
"                               │                                                                    "
"  cornercase (1)               │                                                                    "
"▌ website (1)                  │                                                                    "
"  ↓ 1 more                     │                                                                    "
"  + new project                │                                                                    "
" ───────────────────────────── │                                                                    "
" workspaces                    │                                                                    "
"                               │                                                                    "
"  default                      │                                                                    "
"▌ ├ codex                      │                                                                    "
"  └ + tab                      │                                                                    "
"                               │                             no tab open                            "
"  + new workspace              │                      + tab opens a shell here                      "
" ───────────────────────────── │                                                                    "
" agents                        │                                                                    "
"                               │                                                                    "
"  ! cornercase › issue-98-rem… │                                                                    "
"    claude · Opus 5.5 · 23%    │                                                                    "
"▌ ◐ website                    │                                                                    "
"▌   codex · gpt-5.5 · 41%      │                                                                    "
"  ↓ 1 more                     │                                                                    "
" ───────────────────────────── │                                                                    "
"  issues                       │                                                                    "
"  files                  todo  │                                                                    "
"  settings                     │                                                                    "
"  usage                        │                                                                    "
"  quit                         │                                                                    "
