src/snapshots/cornercase__ui__tests__agents_section__renders_side_by_side.snap
---
source: src/ui.rs
assertion_line: 8343
expression: "render_sized(&shown(Sidebar::SideBySide, entries()), W, TALL.height).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" Projects                      │ Workspaces              │                                          "
"                               │                         │                                          "
"  cornercase (1)               │  default                │                                          "
"▌ website (1)                  │▌ ├ codex                │                                          "
"  api (1)                      │  └ + Tab                │                                          "
"                               │                         │                                          "
"  + New                        │  + New workspace        │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                no tab open               "
"                               │                         │         + Tab opens a shell here         "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
" Agents                        │                         │                                          "
"                               │                         │                                          "
"  ! cornercase › issue-98-rem… │                         │                                          "
"    claude · Opus 5.5 · 23%    │                         │                                          "
"▌ ◐ website                    │                         │                                          "
"▌   codex · gpt-5.5 · 41%      │                         │                                          "
"  ↓ 1 more                     │                         │                                          "
" ───────────────────────────── │ ─────────────────────── │                                          "
"  Settings                     │  Issues                 │                                          "
"  Usage                        │  Files            TODO  │                                          "
"  Quit                         │                         │                                          "
