src/snapshots/cornercase__ui__tests__agents_section__renders_the_compact_agents_menu.snap
---
source: src/ui.rs
assertion_line: 8379
expression: "render_sized(&v, SMALL.width, SMALL.height).backend()"
---
"                                                                                "
"   ≡     website › default › codex                            ▤      ☐      ⌕   "
"                                                                                "
"                                                                                "
"                                                                                "
" ‹ Projects    Agents                                                           "
"                                                                                "
"                                                                                "
"                                                                                "
"  ! cornercase › issue-98-remove-in-background                                  "
"    claude · Opus 5.5 · 23%                                                     "
"▌                                                                               "
"▌ ◐ website                                                                     "
"▌   codex · gpt-5.5 · 41%                                                       "
"                                                                                "
"  ✓ api › main                                                                  "
"    claude                                                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
