src/snapshots/cornercase__ui__tests__agents_section__renders_the_compact_projects_menu_with_its_button.snap
---
source: src/ui.rs
assertion_line: 8385
expression: "render_sized(&v, SMALL.width, SMALL.height).backend()"
---
"                                                                                "
"   ≡     website › default › codex                            ▤      ☐      ⌕   "
"                                                                                "
"                                                                                "
"                                                                                "
" Projects                                                            Agents ›   "
"                                                                                "
"                                                                                "
"                                                                                "
"  cornercase (1)                                                          ⋯  ×  "
"                                                                                "
"▌                                                                               "
"▌ website (1)                                                             ⋯  ×  "
"▌                                                                               "
"                                                                                "
"  api (1)                                                                 ⋯  ×  "
"                                                                                "
"                                                                                "
"                                                                                "
"  + New                                                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ────────────────────────────────────────────────────────────────────────────── "
"                                                                                "
"  Settings                   Usage                     Quit                     "
"                                                                                "
