src/snapshots/cornercase__ui__tests__agents_section__renders_the_tree.snap
---
source: src/ui.rs
assertion_line: 8359
expression: "render_sized(&shown(Sidebar::Tree, entries()), W, TALL.height).backend()"
---
"  ⌕ search projects, workspa…  │                                                                    "
"                               │                                                                    "
" Projects                      │                                                                    "
"                               │                                                                    "
"  ▸ cornercase (1)             │                                                                    "
"▌ ▸ website (1)                │                                                                    "
"  ▸ api (1)                    │                                                                    "
"                               │                                                                    "
"  + New                        │                                                                    "
"                               │                                                                    "
"                               │                                                                    "
"                               │                                                                    "
"                               │                                                                    "
"                               │                                                                    "
"                               │                             no tab open                            "
"                               │                      + Tab opens a shell here                      "
" ───────────────────────────── │                                                                    "
" Agents                        │                                                                    "
"                               │                                                                    "
"  ! cornercase › issue-98-rem… │                                                                    "
"    claude · Opus 5.5 · 23%    │                                                                    "
"▌ ◐ website                    │                                                                    "
"▌   codex · gpt-5.5 · 41%      │                                                                    "
"  ↓ 1 more                     │                                                                    "
" ───────────────────────────── │                                                                    "
"  Issues                       │                                                                    "
"  Files                  TODO  │                                                                    "
"  Settings                     │                                                                    "
"  Usage                        │                                                                    "
"  Quit                         │                                                                    "
