src/snapshots/cornercase__ui__tests__agents_section__renders_workspaces_on_top.snap
---
source: src/ui.rs
expression: "render_sized(&v, W, TALL.height).backend()"
---
"  ⌕ search projects, workspa…  │                                                                    "
"                               │                                                                    "
" workspaces                    │                                                                    "
"                               │                                                                    "
"  default                      │                                                                    "
"▌ ├ codex                      │                                                                    "
"  ↓ more                       │                                                                    "
"  + new workspace              │                                                                    "
" ───────────────────────────── │                                                                    "
" projects                      │                                                                    "
"                               │                                                                    "
"  cornercase (1)               │                                                                    "
"▌ website (1)                  │                                                                    "
"  api (1)                      │                                                                    "
"                               │                             no tab open                            "
"  + new project                │                      + tab opens a shell here                      "
" ───────────────────────────── │                                                                    "
" agents                        │                                                                    "
"                               │                                                                    "
"  ! cornercase › issue-98-rem… │                                                                    "
"    claude · Opus 5.5 · 23%    │                                                                    "
"▌ ◐ website                    │                                                                    "
"▌   codex · gpt-5.5 · 41%      │                                                                    "
"  ↓ 1 more                     │                                                                    "
" ───────────────────────────── │                                                                    "
"  issues                       │                                                                    "
"  files                  todo  │                                                                    "
"  settings                     │                                                                    "
"  usage                        │                                                                    "
"  quit                         │                                                                    "
